--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "react-localization": "^1.0.19"
+    "react-localization": "^1.0.19",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
