--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.5.3",
     "react-localization": "^1.0.19"
   },
   "devDependencies": {
